parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDASSIGN
    AUTO
    BREAK
    CASE
    CONST
    CONTINUE
    DEFAULT
    DIVIDEASSIGN
    DO
    ENUM
    EXTERN
    FOR
    GOTO
    LSHIFT
    LSHIFTASSIGN
    MODASSIGN
    MULASSIGN
    ORASSIGN
    PLUSASSIGN
    REGISTER
    RSHIFT
    RSHIFTASSIGN
    SIGNED
    SIZEOF
    STATIC
    SUBASSIGN
    SWITCH
    TYPEDEF
    UNION
    UNSIGNED
    VOID
    VOLATILE
    XORASSIGN

Grammar

Rule 0     S' -> Program
Rule 1     EMPTY -> <empty>
Rule 2     RELOP -> >
Rule 3     RELOP -> <
Rule 4     RELOP -> GRTREQL
Rule 5     RELOP -> LESSEQL
Rule 6     RELOP -> EQUAL
Rule 7     RELOP -> NEQUAL
Rule 8     TYPE -> INT
Rule 9     TYPE -> SHORT
Rule 10    TYPE -> CHAR
Rule 11    TYPE -> LONG
Rule 12    TYPE -> FLOAT
Rule 13    TYPE -> DOUBLE
Rule 14    Program -> ExtDefList
Rule 15    ExtDefList -> ExtDef ExtDefList
Rule 16    ExtDefList -> EMPTY
Rule 17    FunHead -> Specifier FunDec
Rule 18    ExtDecHead -> Specifier VarDec
Rule 19    ExtDecList -> ExtDecList , VarDec
Rule 20    ExtDecList -> ExtDecHead
Rule 21    ExtDef -> ExtDecList ;
Rule 22    ExtDef -> Specifier ;
Rule 23    ExtDef -> FunHead CompSt
Rule 24    Specifier -> TYPE
Rule 25    Specifier -> StructSpecifier
Rule 26    StructSpecifier -> STRUCT OptTag { DefList }
Rule 27    StructSpecifier -> STRUCT Tag
Rule 28    OptTag -> ID
Rule 29    OptTag -> EMPTY
Rule 30    Tag -> ID
Rule 31    VarDec -> ID
Rule 32    VarDec -> ( VarDec )
Rule 33    VarDec -> VarDec [ NUMBER ]
Rule 34    VarDec -> FunDec
Rule 35    VarDec -> * VarDec
Rule 36    FunDec -> ID ( VarList )
Rule 37    FunDec -> ID ( )
Rule 38    VarList -> ParamDec , VarList
Rule 39    VarList -> ParamDec
Rule 40    ParamDec -> Specifier VarDec
Rule 41    CompSt -> { DefList StmtList }
Rule 42    StmtList -> Stmt StmtList
Rule 43    StmtList -> EMPTY
Rule 44    Stmt -> RETURN Exp ;
Rule 45    Stmt -> PRINT ( Exp ) ;
Rule 46    FlowCtrl -> IF ( Exp ) Stmt
Rule 47    FlowCtrl -> IF ( Exp ) Stmt ELSE Stmt
Rule 48    FlowCtrl -> WHILE ( Exp ) Stmt
Rule 49    Stmt -> Exp ;
Rule 50    Stmt -> CompSt
Rule 51    Stmt -> ;
Rule 52    Stmt -> FlowCtrl
Rule 53    DefList -> Def ; DefList
Rule 54    DefList -> EMPTY
Rule 55    Def -> DecList
Rule 56    DecHead -> Specifier Dec
Rule 57    DecList -> DecHead
Rule 58    DecList -> DecList , Dec
Rule 59    Dec -> VarDec
Rule 60    Dec -> VarDec = Exp
Rule 61    PrefixedExp -> * Exp
Rule 62    PrefixedExp -> & Exp
Rule 63    SubTypeSpecifier -> EMPTY
Rule 64    SubTypeSpecifier -> ( SubTypeSpecifier )
Rule 65    SubTypeSpecifier -> * SubTypeSpecifier
Rule 66    SubTypeSpecifier -> SubTypeSpecifier [ NUMBER ]
Rule 67    SubTypeSpecifier -> SubTypeSpecifier ( TypeList )
Rule 68    SubTypeSpecifier -> SubTypeSpecifier ( )
Rule 69    TypeSpecifier -> TYPE SubTypeSpecifier
Rule 70    TypeList -> TypeSpecifier
Rule 71    TypeList -> TypeList , TypeSpecifier
Rule 72    PrefixedExp -> - Exp
Rule 73    PrefixedExp -> + Exp
Rule 74    PrefixedExp -> PLUSSLF Exp
Rule 75    PrefixedExp -> SUBSLF Exp
Rule 76    PrefixedExp -> ( TypeSpecifier ) Exp
Rule 77    Exp -> ( Exp )
Rule 78    Exp -> ID
Rule 79    Exp -> NUMBER
Rule 80    Exp -> DECIMAL
Rule 81    Exp -> STRINGLITERAL
Rule 82    Exp -> Exp = Exp
Rule 83    Exp -> Exp + Exp
Rule 84    Exp -> Exp - Exp
Rule 85    Exp -> Exp * Exp
Rule 86    Exp -> Exp / Exp
Rule 87    Exp -> FuncCall
Rule 88    Exp -> PrefixedExp
Rule 89    Exp -> Exp BOOLAND Exp
Rule 90    Exp -> Exp BOOLOR Exp
Rule 91    Exp -> ! Exp
Rule 92    Exp -> Exp RELOP Exp
Rule 93    Exp -> Exp [ Exp ]
Rule 94    Exp -> Exp . ID
Rule 95    FuncCall -> ID ( Args )
Rule 96    FuncCall -> ID ( )
Rule 97    Args -> Exp , Args
Rule 98    Args -> Exp

Terminals, with rules where they appear

!                    : 91
&                    : 62
(                    : 32 36 37 45 46 47 48 64 67 68 76 77 95 96
)                    : 32 36 37 45 46 47 48 64 67 68 76 77 95 96
*                    : 35 61 65 85
+                    : 73 83
,                    : 19 38 58 71 97
-                    : 72 84
.                    : 94
/                    : 86
;                    : 21 22 44 45 49 51 53
<                    : 3
=                    : 60 82
>                    : 2
ANDASSIGN            : 
AUTO                 : 
BOOLAND              : 89
BOOLOR               : 90
BREAK                : 
CASE                 : 
CHAR                 : 10
CONST                : 
CONTINUE             : 
DECIMAL              : 80
DEFAULT              : 
DIVIDEASSIGN         : 
DO                   : 
DOUBLE               : 13
ELSE                 : 47
ENUM                 : 
EQUAL                : 6
EXTERN               : 
FLOAT                : 12
FOR                  : 
GOTO                 : 
GRTREQL              : 4
ID                   : 28 30 31 36 37 78 94 95 96
IF                   : 46 47
INT                  : 8
LESSEQL              : 5
LONG                 : 11
LSHIFT               : 
LSHIFTASSIGN         : 
MODASSIGN            : 
MULASSIGN            : 
NEQUAL               : 7
NUMBER               : 33 66 79
ORASSIGN             : 
PLUSASSIGN           : 
PLUSSLF              : 74
PRINT                : 45
REGISTER             : 
RETURN               : 44
RSHIFT               : 
RSHIFTASSIGN         : 
SHORT                : 9
SIGNED               : 
SIZEOF               : 
STATIC               : 
STRINGLITERAL        : 81
STRUCT               : 26 27
SUBASSIGN            : 
SUBSLF               : 75
SWITCH               : 
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VOID                 : 
VOLATILE             : 
WHILE                : 48
XORASSIGN            : 
[                    : 33 66 93
]                    : 33 66 93
error                : 
{                    : 26 41
}                    : 26 41

Nonterminals, with rules where they appear

Args                 : 95 97
CompSt               : 23 50
Dec                  : 56 58
DecHead              : 57
DecList              : 55 58
Def                  : 53
DefList              : 26 41 53
EMPTY                : 16 29 43 54 63
Exp                  : 44 45 46 47 48 49 60 61 62 72 73 74 75 76 77 82 82 83 83 84 84 85 85 86 86 89 89 90 90 91 92 92 93 93 94 97 98
ExtDecHead           : 20
ExtDecList           : 19 21
ExtDef               : 15
ExtDefList           : 14 15
FlowCtrl             : 52
FunDec               : 17 34
FunHead              : 23
FuncCall             : 87
OptTag               : 26
ParamDec             : 38 39
PrefixedExp          : 88
Program              : 0
RELOP                : 92
Specifier            : 17 18 22 40 56
Stmt                 : 42 46 47 47 48
StmtList             : 41 42
StructSpecifier      : 25
SubTypeSpecifier     : 64 65 66 67 68 69
TYPE                 : 24 69
Tag                  : 27
TypeList             : 67 71
TypeSpecifier        : 70 71 76
VarDec               : 18 19 32 33 35 40 59 60
VarList              : 36 38

Parsing method: LALR

state 0

    (0) S' -> . Program
    (14) Program -> . ExtDefList
    (15) ExtDefList -> . ExtDef ExtDefList
    (16) ExtDefList -> . EMPTY
    (21) ExtDef -> . ExtDecList ;
    (22) ExtDef -> . Specifier ;
    (23) ExtDef -> . FunHead CompSt
    (1) EMPTY -> .
    (19) ExtDecList -> . ExtDecList , VarDec
    (20) ExtDecList -> . ExtDecHead
    (24) Specifier -> . TYPE
    (25) Specifier -> . StructSpecifier
    (17) FunHead -> . Specifier FunDec
    (18) ExtDecHead -> . Specifier VarDec
    (8) TYPE -> . INT
    (9) TYPE -> . SHORT
    (10) TYPE -> . CHAR
    (11) TYPE -> . LONG
    (12) TYPE -> . FLOAT
    (13) TYPE -> . DOUBLE
    (26) StructSpecifier -> . STRUCT OptTag { DefList }
    (27) StructSpecifier -> . STRUCT Tag

    $end            reduce using rule 1 (EMPTY -> .)
    INT             shift and go to state 11
    SHORT           shift and go to state 12
    CHAR            shift and go to state 13
    LONG            shift and go to state 14
    FLOAT           shift and go to state 15
    DOUBLE          shift and go to state 16
    STRUCT          shift and go to state 17

    Program                        shift and go to state 1
    ExtDefList                     shift and go to state 2
    ExtDef                         shift and go to state 3
    EMPTY                          shift and go to state 4
    ExtDecList                     shift and go to state 5
    Specifier                      shift and go to state 6
    FunHead                        shift and go to state 7
    ExtDecHead                     shift and go to state 8
    TYPE                           shift and go to state 9
    StructSpecifier                shift and go to state 10

state 1

    (0) S' -> Program .



state 2

    (14) Program -> ExtDefList .

    $end            reduce using rule 14 (Program -> ExtDefList .)


state 3

    (15) ExtDefList -> ExtDef . ExtDefList
    (15) ExtDefList -> . ExtDef ExtDefList
    (16) ExtDefList -> . EMPTY
    (21) ExtDef -> . ExtDecList ;
    (22) ExtDef -> . Specifier ;
    (23) ExtDef -> . FunHead CompSt
    (1) EMPTY -> .
    (19) ExtDecList -> . ExtDecList , VarDec
    (20) ExtDecList -> . ExtDecHead
    (24) Specifier -> . TYPE
    (25) Specifier -> . StructSpecifier
    (17) FunHead -> . Specifier FunDec
    (18) ExtDecHead -> . Specifier VarDec
    (8) TYPE -> . INT
    (9) TYPE -> . SHORT
    (10) TYPE -> . CHAR
    (11) TYPE -> . LONG
    (12) TYPE -> . FLOAT
    (13) TYPE -> . DOUBLE
    (26) StructSpecifier -> . STRUCT OptTag { DefList }
    (27) StructSpecifier -> . STRUCT Tag

    $end            reduce using rule 1 (EMPTY -> .)
    INT             shift and go to state 11
    SHORT           shift and go to state 12
    CHAR            shift and go to state 13
    LONG            shift and go to state 14
    FLOAT           shift and go to state 15
    DOUBLE          shift and go to state 16
    STRUCT          shift and go to state 17

    ExtDef                         shift and go to state 3
    ExtDefList                     shift and go to state 18
    EMPTY                          shift and go to state 4
    ExtDecList                     shift and go to state 5
    Specifier                      shift and go to state 6
    FunHead                        shift and go to state 7
    ExtDecHead                     shift and go to state 8
    TYPE                           shift and go to state 9
    StructSpecifier                shift and go to state 10

state 4

    (16) ExtDefList -> EMPTY .

    $end            reduce using rule 16 (ExtDefList -> EMPTY .)


state 5

    (21) ExtDef -> ExtDecList . ;
    (19) ExtDecList -> ExtDecList . , VarDec

    ;               shift and go to state 19
    ,               shift and go to state 20


state 6

    (22) ExtDef -> Specifier . ;
    (17) FunHead -> Specifier . FunDec
    (18) ExtDecHead -> Specifier . VarDec
    (36) FunDec -> . ID ( VarList )
    (37) FunDec -> . ID ( )
    (31) VarDec -> . ID
    (32) VarDec -> . ( VarDec )
    (33) VarDec -> . VarDec [ NUMBER ]
    (34) VarDec -> . FunDec
    (35) VarDec -> . * VarDec

    ;               shift and go to state 21
    ID              shift and go to state 24
    (               shift and go to state 25
    *               shift and go to state 26

    FunDec                         shift and go to state 22
    VarDec                         shift and go to state 23

state 7

    (23) ExtDef -> FunHead . CompSt
    (41) CompSt -> . { DefList StmtList }

    {               shift and go to state 28

    CompSt                         shift and go to state 27

state 8

    (20) ExtDecList -> ExtDecHead .

    ;               reduce using rule 20 (ExtDecList -> ExtDecHead .)
    ,               reduce using rule 20 (ExtDecList -> ExtDecHead .)


state 9

    (24) Specifier -> TYPE .

    ;               reduce using rule 24 (Specifier -> TYPE .)
    ID              reduce using rule 24 (Specifier -> TYPE .)
    (               reduce using rule 24 (Specifier -> TYPE .)
    *               reduce using rule 24 (Specifier -> TYPE .)


state 10

    (25) Specifier -> StructSpecifier .

    ;               reduce using rule 25 (Specifier -> StructSpecifier .)
    ID              reduce using rule 25 (Specifier -> StructSpecifier .)
    (               reduce using rule 25 (Specifier -> StructSpecifier .)
    *               reduce using rule 25 (Specifier -> StructSpecifier .)


state 11

    (8) TYPE -> INT .

    ;               reduce using rule 8 (TYPE -> INT .)
    ID              reduce using rule 8 (TYPE -> INT .)
    (               reduce using rule 8 (TYPE -> INT .)
    *               reduce using rule 8 (TYPE -> INT .)
    [               reduce using rule 8 (TYPE -> INT .)
    )               reduce using rule 8 (TYPE -> INT .)
    ,               reduce using rule 8 (TYPE -> INT .)


state 12

    (9) TYPE -> SHORT .

    ;               reduce using rule 9 (TYPE -> SHORT .)
    ID              reduce using rule 9 (TYPE -> SHORT .)
    (               reduce using rule 9 (TYPE -> SHORT .)
    *               reduce using rule 9 (TYPE -> SHORT .)
    [               reduce using rule 9 (TYPE -> SHORT .)
    )               reduce using rule 9 (TYPE -> SHORT .)
    ,               reduce using rule 9 (TYPE -> SHORT .)


state 13

    (10) TYPE -> CHAR .

    ;               reduce using rule 10 (TYPE -> CHAR .)
    ID              reduce using rule 10 (TYPE -> CHAR .)
    (               reduce using rule 10 (TYPE -> CHAR .)
    *               reduce using rule 10 (TYPE -> CHAR .)
    [               reduce using rule 10 (TYPE -> CHAR .)
    )               reduce using rule 10 (TYPE -> CHAR .)
    ,               reduce using rule 10 (TYPE -> CHAR .)


state 14

    (11) TYPE -> LONG .

    ;               reduce using rule 11 (TYPE -> LONG .)
    ID              reduce using rule 11 (TYPE -> LONG .)
    (               reduce using rule 11 (TYPE -> LONG .)
    *               reduce using rule 11 (TYPE -> LONG .)
    [               reduce using rule 11 (TYPE -> LONG .)
    )               reduce using rule 11 (TYPE -> LONG .)
    ,               reduce using rule 11 (TYPE -> LONG .)


state 15

    (12) TYPE -> FLOAT .

    ;               reduce using rule 12 (TYPE -> FLOAT .)
    ID              reduce using rule 12 (TYPE -> FLOAT .)
    (               reduce using rule 12 (TYPE -> FLOAT .)
    *               reduce using rule 12 (TYPE -> FLOAT .)
    [               reduce using rule 12 (TYPE -> FLOAT .)
    )               reduce using rule 12 (TYPE -> FLOAT .)
    ,               reduce using rule 12 (TYPE -> FLOAT .)


state 16

    (13) TYPE -> DOUBLE .

    ;               reduce using rule 13 (TYPE -> DOUBLE .)
    ID              reduce using rule 13 (TYPE -> DOUBLE .)
    (               reduce using rule 13 (TYPE -> DOUBLE .)
    *               reduce using rule 13 (TYPE -> DOUBLE .)
    [               reduce using rule 13 (TYPE -> DOUBLE .)
    )               reduce using rule 13 (TYPE -> DOUBLE .)
    ,               reduce using rule 13 (TYPE -> DOUBLE .)


state 17

    (26) StructSpecifier -> STRUCT . OptTag { DefList }
    (27) StructSpecifier -> STRUCT . Tag
    (28) OptTag -> . ID
    (29) OptTag -> . EMPTY
    (30) Tag -> . ID
    (1) EMPTY -> .

    ID              shift and go to state 31
    {               reduce using rule 1 (EMPTY -> .)

    OptTag                         shift and go to state 29
    Tag                            shift and go to state 30
    EMPTY                          shift and go to state 32

state 18

    (15) ExtDefList -> ExtDef ExtDefList .

    $end            reduce using rule 15 (ExtDefList -> ExtDef ExtDefList .)


state 19

    (21) ExtDef -> ExtDecList ; .

    INT             reduce using rule 21 (ExtDef -> ExtDecList ; .)
    SHORT           reduce using rule 21 (ExtDef -> ExtDecList ; .)
    CHAR            reduce using rule 21 (ExtDef -> ExtDecList ; .)
    LONG            reduce using rule 21 (ExtDef -> ExtDecList ; .)
    FLOAT           reduce using rule 21 (ExtDef -> ExtDecList ; .)
    DOUBLE          reduce using rule 21 (ExtDef -> ExtDecList ; .)
    STRUCT          reduce using rule 21 (ExtDef -> ExtDecList ; .)
    $end            reduce using rule 21 (ExtDef -> ExtDecList ; .)


state 20

    (19) ExtDecList -> ExtDecList , . VarDec
    (31) VarDec -> . ID
    (32) VarDec -> . ( VarDec )
    (33) VarDec -> . VarDec [ NUMBER ]
    (34) VarDec -> . FunDec
    (35) VarDec -> . * VarDec
    (36) FunDec -> . ID ( VarList )
    (37) FunDec -> . ID ( )

    ID              shift and go to state 34
    (               shift and go to state 25
    *               shift and go to state 26

    VarDec                         shift and go to state 33
    FunDec                         shift and go to state 35

state 21

    (22) ExtDef -> Specifier ; .

    INT             reduce using rule 22 (ExtDef -> Specifier ; .)
    SHORT           reduce using rule 22 (ExtDef -> Specifier ; .)
    CHAR            reduce using rule 22 (ExtDef -> Specifier ; .)
    LONG            reduce using rule 22 (ExtDef -> Specifier ; .)
    FLOAT           reduce using rule 22 (ExtDef -> Specifier ; .)
    DOUBLE          reduce using rule 22 (ExtDef -> Specifier ; .)
    STRUCT          reduce using rule 22 (ExtDef -> Specifier ; .)
    $end            reduce using rule 22 (ExtDef -> Specifier ; .)


state 22

    (17) FunHead -> Specifier FunDec .
    (34) VarDec -> FunDec .

    {               reduce using rule 17 (FunHead -> Specifier FunDec .)
    [               reduce using rule 34 (VarDec -> FunDec .)
    ;               reduce using rule 34 (VarDec -> FunDec .)
    ,               reduce using rule 34 (VarDec -> FunDec .)


state 23

    (18) ExtDecHead -> Specifier VarDec .
    (33) VarDec -> VarDec . [ NUMBER ]

    ;               reduce using rule 18 (ExtDecHead -> Specifier VarDec .)
    ,               reduce using rule 18 (ExtDecHead -> Specifier VarDec .)
    [               shift and go to state 36


state 24

    (36) FunDec -> ID . ( VarList )
    (37) FunDec -> ID . ( )
    (31) VarDec -> ID .

    (               shift and go to state 37
    [               reduce using rule 31 (VarDec -> ID .)
    ;               reduce using rule 31 (VarDec -> ID .)
    ,               reduce using rule 31 (VarDec -> ID .)


state 25

    (32) VarDec -> ( . VarDec )
    (31) VarDec -> . ID
    (32) VarDec -> . ( VarDec )
    (33) VarDec -> . VarDec [ NUMBER ]
    (34) VarDec -> . FunDec
    (35) VarDec -> . * VarDec
    (36) FunDec -> . ID ( VarList )
    (37) FunDec -> . ID ( )

    ID              shift and go to state 34
    (               shift and go to state 25
    *               shift and go to state 26

    VarDec                         shift and go to state 38
    FunDec                         shift and go to state 35

state 26

    (35) VarDec -> * . VarDec
    (31) VarDec -> . ID
    (32) VarDec -> . ( VarDec )
    (33) VarDec -> . VarDec [ NUMBER ]
    (34) VarDec -> . FunDec
    (35) VarDec -> . * VarDec
    (36) FunDec -> . ID ( VarList )
    (37) FunDec -> . ID ( )

    ID              shift and go to state 34
    (               shift and go to state 25
    *               shift and go to state 26

    VarDec                         shift and go to state 39
    FunDec                         shift and go to state 35

state 27

    (23) ExtDef -> FunHead CompSt .

    INT             reduce using rule 23 (ExtDef -> FunHead CompSt .)
    SHORT           reduce using rule 23 (ExtDef -> FunHead CompSt .)
    CHAR            reduce using rule 23 (ExtDef -> FunHead CompSt .)
    LONG            reduce using rule 23 (ExtDef -> FunHead CompSt .)
    FLOAT           reduce using rule 23 (ExtDef -> FunHead CompSt .)
    DOUBLE          reduce using rule 23 (ExtDef -> FunHead CompSt .)
    STRUCT          reduce using rule 23 (ExtDef -> FunHead CompSt .)
    $end            reduce using rule 23 (ExtDef -> FunHead CompSt .)


state 28

    (41) CompSt -> { . DefList StmtList }
    (53) DefList -> . Def ; DefList
    (54) DefList -> . EMPTY
    (55) Def -> . DecList
    (1) EMPTY -> .
    (57) DecList -> . DecHead
    (58) DecList -> . DecList , Dec
    (56) DecHead -> . Specifier Dec
    (24) Specifier -> . TYPE
    (25) Specifier -> . StructSpecifier
    (8) TYPE -> . INT
    (9) TYPE -> . SHORT
    (10) TYPE -> . CHAR
    (11) TYPE -> . LONG
    (12) TYPE -> . FLOAT
    (13) TYPE -> . DOUBLE
    (26) StructSpecifier -> . STRUCT OptTag { DefList }
    (27) StructSpecifier -> . STRUCT Tag
